fixed the spacing issues in headers

--- a/static/style.css
+++ b/static/style.css
@@ -7,12 +7,13 @@ body {
 
 .headers {
     position: relative;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    flex-direction: row;
     width: 100%;
-    height: 100%;
+    min-height: 120px;
+    padding: 10px 20px;
+    box-sizing: border-box;
 
     background-color: #3f230d;
     border-style: solid;
@@ -24,6 +25,14 @@ body {
 
     font-family: "Robotomono", monospace, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+}
+
+.headers > :first-child {
+    justify-self: start;
+}
+
+.headers > :last-child {
+    justify-self: end;
 }
 
 .headers img {
@@ -53,8 +62,10 @@ body {
 .topbar {
     height: 100px;
     width: 500px;
-
-    position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
 
     border-width: 3px;
     border-radius: 10px;
@@ -65,6 +76,10 @@ body {
    
     padding-left: 20px;
     padding-right: 20px;   
+}
+
+.topbar h1 {
+    margin: 0;
 }
 
 .content {
